--- a/html-css/views/index.ejs
+++ b/html-css/views/index.ejs
@@ -5,11 +5,13 @@
 	<body>
 
 		<!-- Wrap all page content here -->
+			<% include navbar %>
 		<div id="wrap" ng-controller="LandingCtrl">
 
-			<% include navbar %>
+
 
 			<!-- Begin page content -->
+			<div class="main">
 			<div class="container home">
 
 				<img src="http://d13iccluy1t0t3.cloudfront.net/img/home_banner.jpg" class="banner" />
@@ -126,6 +128,7 @@
 				<a name="faq">&nbsp;</a>
 			</div>
 
+
 			<div class="container partners">
 				<h1 class="brand_font_light"><span>•</span> Nos partenaires <span>•</span></h1>
 				<div id="slick-partners" class="slick-carrousel">
@@ -204,7 +207,7 @@
 					</a>
 				</div>
 			</div>
-
+</div>
 		</div>
 		<!-- end of wrap -->
 
