--- a/html-css/views/navbar.ejs
+++ b/html-css/views/navbar.ejs
@@ -33,7 +33,7 @@
 			</ul>
 		</div><!--/.nav-collapse -->
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" ng-click="isNavbarCollapsed = !isNavbarCollapsed">
+			<button type="button" class="navbar-toggle" ng-click="showNavbar()">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
