--- a/html-css/public/css/template.css
+++ b/html-css/public/css/template.css
@@ -692,4 +692,34 @@ html, body {
 	.show_br {
 		display: none;
 	}
-}​
+}
+
+
+@media (max-width:768px) {
+	.footer {
+		height: 650px;
+	}
+
+	.col-xs-6, .col-xs-1, .col-xs-2, .col-xs-3
+	{
+		float:none;
+		margin: 0 auto;
+		margin-left: 20%;
+		width: 60%;
+	}
+	
+	.footer_category {
+		margin-bottom: 20px;
+		margin-top: 20px;
+	}
+	
+	
+	
+.collapse.width {
+    height: auto;
+    -webkit-transition: width 0.35s ease;
+    -moz-transition: width 0.35s ease;
+    -o-transition: width 0.35s ease;
+    transition: width 0.35s ease;
+}
+}
